-Gallery section added -Comments section fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="hint_comment">Ingresar comentario</string>
     <string name="text_comments">Comentarios</string>
     <string name="text_send_comment">Enviar comentario</string>
+    <string name="success_comment_added">Comentario agregado correctamente!</string>
 </resources>
