-Changes in options menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Oaxaca</string>
+    <string name="app_name">Ta\'an</string>
     <string name="description_centro_historico">Un hermoso destino colonial, en el centro de Oaxaca podrás admirar impresionantes monumentos históricos unidos a una rica tradición indígena que se mantiene a través de los años. Visita el Zócalo, la Catedral, el Centro Cultural Santo Domingo, el Museo de Arte Contemporáneo, el Museo de Arte Prehispánico Rufino Tamayo y más. O sólo pasea por sus calles admirando las hermosas fachadas y sentándome a disfrutar de un rico platillo típico o mezcal.</string>
     <string name="title_centro_historico">Centro historico</string>
     <string name="title_templo_sto_domingo">Templo de santo Domingo</string>
